src/App.css
table,th,td {
  text-align: center;
  border: 1px solid black;
  
  text-wrap: wrap;
}
#root{
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
body{
  min-height: 100vh;
}
.country table caption {
  text-align: left;
}
th{
  width: 20%;
}
td{
  text-align: left;
  padding-left: 1rem;
}
table{
  width: 80%;

}
.countryList{
  margin: auto;
  width: 60%;
  padding: 10px;
  min-width: 400px;
  
}
.country{
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}
select {
  margin: auto;
  width: 10%;
  min-width: 150px;
  padding: 10px;
  display: block;
  text-align: center;
}
caption{
  font-size: 1.5rem;
}
h3 {
  font-size: 2rem;
}

